# autoresearch-strix-halo

./: .gitignore  README.md  program.md  pyproject.toml  results.tsv  train.py
scripts/: install_rocm.sh  setup.sh  verify.sh
